--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       />
     <link rel="stylesheet" href="./src/index.css">
     <link rel="icon" href="/favicon.ico">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
     
     <title>Furniro</title>
   </head>
